--- a/css/main.scss
+++ b/css/main.scss
@@ -87,6 +87,7 @@ header {
 	.header__navigation {
 		height: 95px;
 		line-height: 95px;
+		width: 100%;
 
 		.header__logo {
 			padding-top: $base-padding*1.75;
@@ -148,7 +149,7 @@ header {
 		text-align: center;
 		padding-bottom: $base-padding*2.5;
 
-		.params__icon {
+		.items__icon {
 			color: $colorRed;
 			font-size: $font-size-xxxlg;
 		}
@@ -281,6 +282,7 @@ footer {
 			}
 
 			.footer__text {
+				margin: 0;
 				font-size: $font-size-s;
 				color: $colorSilver;
 			}
